# rp2040-examples

./: Cargo.toml  Embed.toml  README.md  debug_probes.md
.cargo/: config.toml
.github/workflows/: test.yml
examples/: adc.rs  gps_nmea.rs  toggle_pin.rs  uart.rs
src/: main.rs
